--- a/.github/workflows/shell.yml
+++ b/.github/workflows/shell.yml
@@ -1,24 +1,32 @@
 
 name: shell
 
-on: [push, workflow_dispatch]
+on:
+  workflow_dispatch:
+    inputs:
+      release:
+        description: 'NetBSD release'
+        required: true
+        type: choice
+        options:
+        - '10.0'
+        - '9.4'
+        - '9.3'
+        - '9.2'
+        - '9.1'
+        - '9.0'
+        default: '10.0'
 
 jobs:
   runshell:
     runs-on: ubuntu-22.04
     name: Start a netbsd shell
     steps:
-    - uses: vmactions/cf-tunnel@v0
-      id: tunnel
-      with:
-        protocol: http
-        port: 8000
-    - name: Set envs
-      run: echo "TestingDomain=${{steps.tunnel.outputs.server}}" >> $GITHUB_ENV
     - name: Starting a netbsd VM, please wait. It may take 3 minutes
       id: shell
       uses: vmactions/netbsd-vm@main
       with:
+        release: ${{ github.event.inputs.release || '10.0' }}
         nat: |
           "8000": "80"
         envs: 'TestingDomain TEST_PREFERRED_CHAIN TEST_ACME_Server INPUT_*'
